chore: Day 2 - Part 1 Complete

--- a/src/dg.adventofcode.2022.crosscutting/dg.adventofcode.2022.crosscutting.csproj
+++ b/src/dg.adventofcode.2022.crosscutting/dg.adventofcode.2022.crosscutting.csproj
@@ -9,6 +9,9 @@
       <None Update="TestData\CalorieCounting.txt">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="TestData\RockPaperScissors.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
