chore: completed day 3

--- a/src/dg.adventofcode.2022.crosscutting/dg.adventofcode.2022.crosscutting.csproj
+++ b/src/dg.adventofcode.2022.crosscutting/dg.adventofcode.2022.crosscutting.csproj
@@ -12,6 +12,9 @@
       <None Update="TestData\RockPaperScissors.txt">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="TestData\Rucksack.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
