chore: completed Day 5

--- a/src/dg.adventofcode.2022.crosscutting/dg.adventofcode.2022.crosscutting.csproj
+++ b/src/dg.adventofcode.2022.crosscutting/dg.adventofcode.2022.crosscutting.csproj
@@ -18,6 +18,9 @@
       <None Update="TestData\CampCleanup.txt">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="TestData\SupplyStacks.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
