chore: set up day 6

--- a/src/dg.adventofcode.2022.crosscutting/dg.adventofcode.2022.crosscutting.csproj
+++ b/src/dg.adventofcode.2022.crosscutting/dg.adventofcode.2022.crosscutting.csproj
@@ -21,6 +21,9 @@
       <None Update="TestData\SupplyStacks.txt">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="TestData\TuningTrouble.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
