chore: setup Day 8

--- a/src/dg.adventofcode.2022.crosscutting/dg.adventofcode.2022.crosscutting.csproj
+++ b/src/dg.adventofcode.2022.crosscutting/dg.adventofcode.2022.crosscutting.csproj
@@ -27,6 +27,9 @@
       <None Update="TestData\NoSpace.txt">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="TestData\TreeHouse.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
